import java.util.List;

public class ChessConfig {
    public List<ChessPiece> pieces;
}
