package Enums;

public enum ColorGame {
    WHITE,
    BLACK,
}
