package Enums;

public enum GameState {
    WHITE_TURN,
    BLACK_TURN,
    MAT,
    PAT,
    WHITE_CHECK,
    BLACK_CHECK,
}
